# rosa-log-router

./: .env.sample  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  DESIGN.md  Makefile  OWNERS  README.md  apply-amador-patch.sh  docker-compose.yml  force_konflux_release  revert-to-development-patch.sh  test-vector.sh  test_processor_integration.py  test_tenant_management.py  vector-local-test.yaml
.tekton/: rosa-log-router-api-pull-request.yaml  rosa-log-router-api-push.yaml  rosa-log-router-authorizer-pull-request.yaml  rosa-log-router-authorizer-push.yaml  rosa-log-router-processor-go-pull-request.yaml  rosa-log-router-processor-go-push.yaml  rosa-log-router-processor-pull-request.yaml  rosa-log-router-processor-push.yaml
api/: Containerfile.api  Containerfile.authorizer  Containerfile.server  README.md  pyproject.toml  requirements.txt
api/src/: app.py
api/src/handlers/: __init__.py  authorizer.py  health.py
api/src/models/: responses.py  tenant.py
api/src/services/: dynamo.py
api/src/utils/: auth.py  logger.py
api/tests/: __init__.py  conftest.py  test_app.py  test_authorizer.py  test_dynamo_service.py
cloudformation/: MIGRATION_GUIDE.md  README.md  cluster-processor-role.yaml  cluster-vector-role.yaml  core-infrastructure.yaml  customer-account-template.yaml  customer-log-distribution-role.yaml  deploy.sh  firehose-test.yaml  kinesis-stack.yaml  lambda-stack.yaml  main.yaml  monitoring-stack.yaml
container/: .golangci.yml  Containerfile  Containerfile.collector  Containerfile.processor  Containerfile.processor_go  README-GO.md  go.mod  (+5 more)
(+281 files in other folders)
